[tool.poetry]
name = "nyamatrix"
version = "0.1.0"
description = "A re-calculator for bancho.py with elegant performance."
authors = ["Usagi no Niku <chenbohan911@163.com>"]
packages = [
    { include = "nyamatrix" }
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
typer = ">=0.15.2,<0.16.0"
coloredlogs = ">=15.0.1,<16.0.0"
memory-profiler = ">=0.61.0,<0.62.0"
sqlalchemy = ">=2.0.40,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
redis = ">=5.2.1,<6.0.0"
pymysql = ">=1.1.1,<2.0.0"
"rosu-pp-py" = {git = "https://github.com/ppy-sb/rosu-pp-py.git"}

[tool.poetry.scripts]
nyacalc = "nyamatrix.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
